--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,16 @@
     "name": "simplesvet/api",
     "description": "api básica para app da simplesvet",
     "require": {
+        "php": ">=7.4",
         "slim/slim": "4.*",
-        "slim/psr7": "^1.4"
+        "slim/psr7": "^1.4",
+        "vlucas/phpdotenv": "^5.3",
+        "doctrine/orm": "^2.9",
+        "php-di/slim-bridge": "^3.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
