--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,8 @@ services:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     volumes:
-      - ./mysql-dump:/docker-entrypoint-initdb.d
+      # - ./mysql-dump:/docker-entrypoint-initdb.d
+      - mysql:/var/lib/mysql/
     restart: always
     container_name: mysql
     ports:
@@ -34,6 +35,6 @@ services:
       MYSQL_USER: 'simplesvet'
       MYSQL_PASSWORD: '12345'
       MYSQL_ROOT_PASSWORD: '12345678'
-#volumes:
+volumes:
  # mysql-dump:
-  # mysql:
+  mysql:
