--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,15 @@ services:
       - "9000:9000"
     volumes:
       - ".:/var/www/html/"
+    links:
+      - mysql
+      
   mysql:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     volumes:
       # - ./mysql-dump:/docker-entrypoint-initdb.d
-      - mysql:/var/lib/mysql/
+      - mysql:/var/lib/mysql
     restart: always
     container_name: mysql
     ports:
