--- a/nginx.conf
+++ b/nginx.conf
@@ -32,14 +32,48 @@ http {
         index        index.php;
 
         location / {
+            
 
-            try_files $uri $uri/ /index.php;       
+            
+            try_files $uri /index.php$is_args$args;  
 
             location = /index.php {
-
+                # if ($request_method = 'OPTIONS') {
+                #     add_header 'Access-Control-Allow-Origin' '*';
+                #     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                #     #
+                #     # Custom headers and headers various browsers *should* be OK with but aren't
+                #     #
+                #     add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                #     #
+                #     # Tell client that this pre-flight info is valid for 20 days
+                #     #
+                #     add_header 'Access-Control-Max-Age' 1728000;
+                #     add_header 'Content-Type' 'text/plain; charset=utf-8';
+                #     add_header 'Content-Length' 0;
+                #     return 204;
+                # }
+                # if ($request_method = 'POST') {
+                #     add_header 'Access-Control-Allow-Origin' '*';
+                #     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                #     add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                #     add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+                # }
+                # if ($request_method = 'GET') {
+                #     add_header 'Access-Control-Allow-Origin' '*';
+                #     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                #     add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                #     add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+                # }
+                try_files $uri =404;
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
+                include fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+                fastcgi_index index.php;
                 fastcgi_pass   php:9000;
-                fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                include        fastcgi_params;
+                # fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                # include        fastcgi_params;
 
             }     
            
